small design changes

--- a/src/app/components/console/console.component.html
+++ b/src/app/components/console/console.component.html
@@ -1,5 +1,8 @@
-<div class="console">
+<h2>Log:</h2>
+<div #scrollContainer class="console">
   <div *ngFor="let log of logger.logs$ | async">
     {{ log }}
   </div>
 </div>
+<button mat-raised-button (click)="clean()" class="clean">Clean</button>
+
