--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,5 +1,4 @@
-<mat-toolbar color="primary"></mat-toolbar>
-<mat-nav-list>
+<mat-nav-list class="list">
   <a mat-list-item routerLink="/home">
     <div class="menu-item">
       <mat-icon>home</mat-icon> Home
