--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,10 @@
   padding: 16px;
   min-height: calc(100vh - 128px); /* Adjust for toolbar and footer height */
 }
+
+
+
+
+.example-sidenav {
+  padding: 20px;
+}
