fixe for no posts at all

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,3 +17,10 @@
   <li>Simple, intuitive interface for all users.</li>
   <li>Completely free and open-source.</li>
 </ul>
+
+<div class="github-link">
+  <a href="https://github.com/PavlikPolivka/bsky-toolbox" target="_blank" rel="noopener noreferrer">
+    <img src="assets/github-mark.svg" alt="GitHub" />
+    View on GitHub
+  </a>
+</div>
