--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,3 +5,28 @@
   border-radius: 5px;
   background-color: #e6f2fb;
 }
+
+.github-link {
+  margin: 20px 0;
+  text-align: center;
+
+  a {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: #24292f;
+    font-weight: bold;
+    font-size: 16px;
+    transition: color 0.3s;
+
+    img {
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+    }
+
+    &:hover {
+      color: #0366d6;
+    }
+  }
+}
