starter pack unfollow

--- a/src/app/components/console/console.component.html
+++ b/src/app/components/console/console.component.html
@@ -4,5 +4,5 @@
     {{ log }}
   </div>
 </div>
-<button mat-raised-button (click)="clean()" class="clean">Clean</button>
+<button mat-raised-button (click)="clean()" class="clean">Clean Log</button>
 
