--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -12,6 +12,7 @@
   <ng-container *ngIf="account">
     <mat-divider></mat-divider>
     <a mat-list-item routerLink="/cleanup">Following Cleanup</a>
+    <a mat-list-item routerLink="/starterPackUnfollow">Unfollow Starter Pack</a>
   </ng-container>
 
 </mat-nav-list>
